--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.533.0",
+    "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.54",
     "prismjs": "^1.30.0",
     "prosemirror-example-setup": "^1.2.3",
@@ -26,6 +30,8 @@
     "react-pdf": "^10.0.1",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.1",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -37,6 +43,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
