--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.533.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.54",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/lodash": "^4.17.20",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
